add missing REST API endpoint
